Bug 357773 - Show Time: 1 in status bar after time out
Summary: Show Time: 1 in status bar after time out
Status: RESOLVED FIXED
Alias: None
Product: kbounce
Classification: Applications
Component: general (other bugs)
Version First Reported In: 0.11
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: Roney Gomes
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2016-01-10 01:12 UTC by André Marcelo Alvarenga
Modified: 2016-01-10 01:58 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Screenshot (266.15 KB, image/png)
2016-01-10 01:14 UTC, André Marcelo Alvarenga
Details

Note You need to log in before you can comment on or make changes to this bug.
Description André Marcelo Alvarenga 2016-01-10 01:12:42 UTC
See screenshot.

Status bar should be display "Time: 0" after time out.

Reproducible: Always
Comment 1 André Marcelo Alvarenga 2016-01-10 01:14:15 UTC
Created attachment 96553 [details]
Screenshot
Comment 2 Frederik Schwarzer 2016-01-10 01:57:08 UTC
Git commit 6d85449d55346c171d98048612eea9bd066ebcfb by Frederik Schwarzer.
Committed on 10/01/2016 at 01:55.
Pushed by schwarzer into branch 'master'.

Set time to 0 if timeout occurred.

Thanks André Marcelo Alvarenga for the report.

M  +1    -0    gamewidget.cpp

http://commits.kde.org/kbounce/6d85449d55346c171d98048612eea9bd066ebcfb
Comment 3 Frederik Schwarzer 2016-01-10 01:58:14 UTC
Git commit 7bb125da1e324fc60cd3e6b445fd51ce068b0c7b by Frederik Schwarzer.
Committed on 10/01/2016 at 01:57.
Pushed by schwarzer into branch 'Applications/15.12'.

Set time to 0 if timeout occurred.

Thanks André Marcelo Alvarenga for the report.

M  +1    -0    gamewidget.cpp

http://commits.kde.org/kbounce/7bb125da1e324fc60cd3e6b445fd51ce068b0c7b