Set time to 0 if timeout occurred.

Thanks André Marcelo Alvarenga for the report.

BUG: 357773